--- a/number-conversion.html
+++ b/number-conversion.html
@@ -73,6 +73,7 @@
         </div>
     </section>
 
+    <!-- Forgot password -->
     <section id="forgotpassword" style="display: none;">
         <div class="container" id="forgotpasswordForm">
             <h2>FORGOT PASSWORD</h2>
@@ -128,7 +129,7 @@
             <div class="container" style="width: max-content; border: 0; margin-top: 14px;">
                 <button type="button" onclick="bin()" id="baseButtonBin">BIN</button>
                 <button type="button" onclick="dec()" id="baseButtonDec" style="color: #aff6ff;
-                    text-shadow: 0 0 6px #F8F9FA;" disabled>DEC</button>
+                    text-shadow: 0 0 6px #F8F9FA; border: solid 1px #aff6ff80" disabled>DEC</button>
                 <button type="button" onclick="oct()" id="baseButtonOct">OCT</button>
                 <button type="button" onclick="hex()" id="baseButtonHex">HEX</button><br>
                 <button type="button" onclick="hexA()" id="hexButton10" class="hexButton">A</button>
